Revert "8345286: Remove use of SecurityManager API from misc areas"