@@ -1,6 +1,5 @@
 /*
  * Copyright (c) 2020, 2022, Red Hat Inc.
- * Copyright (c) 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,8 +29,8 @@ import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.lang.System.Logger;
 import java.lang.System.Logger.Level;
-import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -141,7 +140,7 @@ public class CgroupSubsystemFactory {
                                                            String cgroups,
                                                            String selfCgroup) throws IOException {
         final Map<String, CgroupInfo> infos = new HashMap<>();
-        List<String> lines = Files.readAllLines(Path.of(cgroups));
+        List<String> lines = CgroupUtil.readAllLinesPrivileged(Paths.get(cgroups));
         for (String line : lines) {
             if (line.startsWith("#")) {
                 continue;
@@ -181,7 +180,7 @@ public class CgroupSubsystemFactory {
         // However, continuing in that case does not make sense as we'd need
         // information from mountinfo for the mounted controller paths which we wouldn't
         // find anyway in that case.
-        lines = Files.readAllLines(Path.of(mountInfo));
+        lines = CgroupUtil.readAllLinesPrivileged(Paths.get(mountInfo));
         boolean anyCgroupMounted = false;
         for (String line: lines) {
             boolean cgroupsControllerFound = amendCgroupInfos(line, infos, isCgroupsV2);
@@ -197,7 +196,8 @@ public class CgroupSubsystemFactory {
         // See:
         //   setCgroupV1Path() for the action run for cgroups v1 systems
         //   setCgroupV2Path() for the action run for cgroups v2 systems
-        try (Stream<String> selfCgroupLines = Files.lines(Path.of(selfCgroup))) {
+        try (Stream<String> selfCgroupLines =
+             CgroupUtil.readFilePrivileged(Paths.get(selfCgroup))) {
             Consumer<String[]> action = (tokens -> setCgroupV1Path(infos, tokens));
             if (isCgroupsV2) {
                 action = (tokens -> setCgroupV2Path(infos, tokens));
@@ -311,7 +311,7 @@ public class CgroupSubsystemFactory {
             String mountPath = lineMatcher.group(2);
             String fsType = lineMatcher.group(3);
             if (fsType.equals("cgroup")) {
-                Path p = Path.of(mountPath);
+                Path p = Paths.get(mountPath);
                 String[] controllerNames = p.getFileName().toString().split(",");
                 for (String controllerName: controllerNames) {
                     switch (controllerName) {
